task6-ec2-deploy/main.tf
resource "aws_instance" "myserver" {
ami = var.ami_id
  instance_type = var.instance_type
tags = {
    Name = "my-ec2-instance"
  }
}

resource "aws_security_group" "my_sg" {
name = "my-ec2-sg"
  ingress {
from_port = 22
to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
      to_port = 80
    protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
  }
}
